<resources>
    <string name="app_name">AdvinheONumero</string>
    <string name="topo">Digite um numero</string>
    <string name="resposta" />
    <string name="texto1">Acertou!</string>
    <string name="texto2">Errou! O numero digitado eh maior</string>
    <string name="texto3">Errou! O numero digitado eh menor</string>
    <string name="numero" />
    <string name="number" />
    <string name="textoBotao">OK!</string>
    <string name="contador" />
</resources>
